feat: try to sync server and client